Use valueOf instead of constructor for better time/space perf
Noticed by ErrorProne:
http://errorprone.info/bugpattern/BoxedPrimitiveConstructor

Change-Id: I044e6a0a5508a92b6638c9a0d25faa310897c71d